8223813: (aio) Iocp.getErrorMessage should drop trailing \r\n

Reviewed-by: alanb, igerasim, rriggs